Added a ping route to ping a project
