# src/routes/ping.ts
@@ -1,0 +1,16 @@
+import express from "express";
+import config from "../config/config";
+
+const router = express.Router({ mergeParams: true });
+
+router.get("/", async (req: express.Request<{ projectKey: string }>, res) => {
+  const { projectKey } = req.params;
+
+  if (!config.projects[projectKey]) {
+    return res.status(404).json({ error: "Unknown project key" });
+  }
+
+  return res.json("Project " + projectKey + " is reachable.");
+});
+
+export default router;
